[project]
name = "toupie"
version = "0.1.0"
description = "A Tiny Python Kernel"
authors = [
  { name="Sébastien Boisgérault", email="Sebastien.Boisgerault@gmail.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=3.1.1",
    "waitress>=3.0.2",
    "yaspin>=3.1.0",
]

[project.scripts]
toupie = "toupie:main"

[project.urls]
Homepage = "https://github.com/boisgera/toupie"
Issues = "https://github.com/boisgera/toupie/issues"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
